# internal_api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  main.py
app/middlewares/: __init__.py  error_handler.py
app/models/: schemas.py
app/routers/: auth.py  projects.py
app/services/: saf_client.py
docs/: API.md  CHANGELOG.md  DEVELOPMENT_ROADMAP.md  PLANNING.md  PLANNING_FWS_BY_PROJECT_ID_API.md  PLANNING_PROJECT_SUMMARY_API.md  PLANNING_PROJECT_SUMMARY_FULL_API.md  PLANNING_TEST_STATUS_API.md
lib/: __init__.py  decorators.py  exceptions.py  logger.py  utils.py
scripts/: docker.sh  restart.sh  run_dev.sh  run_tests.sh
tests/: conftest.py
tests/fixtures/: mock_responses.py  sample_data.json
tests/integration/: test_auth_api.py  test_projects_api.py
tests/unit/: test_config.py  test_lib.py  test_projects.py  test_saf_client.py  test_schemas.py
